[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolbox_continu_inzicht"
description = "Toolbox voor waterkeringbeheerders om risico's in kaart te brengen"
readme = "README.md"
authors = [
    { name = "David Haasnoot", email = "d.haasnoot@hkv.nl" },
    { name = "Jerom Aerts", email = "j.aerts@hkv.nl" },
    { name = "David Haasnoot", email = "d.haasnoot@hkv.nl" },
    { name = "Guy Dupuits", email = "dupuits@hkv.nl" },
    { name = "Bart Thonus", email = "b.thonus@hkv.nl" },
    { name = "Rolf Waterman", email = "r.watermans@hkv.nl" },
    { name = "Marit Zethof", email = "m.zethof@hkv.nl" },

]

license = { text = "GPL-3.0-or-later" }

requires-python = ">=3.11"
dynamic = ["version"]

# bare minimum dependencies
dependencies = [
    "pandas",
    "pydantic>=2",
    "python-dotenv>=1.0.1",
    "pyyaml",
]

[project.optional-dependencies]
fragility_curves = [
    "scipy",
    "openturns>=1.23",
    "probabilistic_piping==0.0.5",
    "pydra_core==0.0.9",
]

loads = [
    "requests",
    "httpx",
    "netcdf4>=1.7.1",
    "xarray",
]

inspections = [
    "fiona",
    "geopandas",
    "pyogrio",
    "shapely",
    "toolbox_continu_inzicht[loads]"
]

sections = ["scipy"]

# io dependencies separate for now
io = [
    "pyarrow",
    "sqlalchemy",
    "psycopg2",
    "xarray",
    "netcdf4>=1.7.1",
    "openpyxl",
]

all = [
    "toolbox_continu_inzicht[fragility_curves]",
    "toolbox_continu_inzicht[loads]",
    "toolbox_continu_inzicht[inspections]",
    "toolbox_continu_inzicht[sections]",
    "toolbox_continu_inzicht[io]",
]

[tool.hatch.version]
path = "toolbox_continu_inzicht/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["toolbox_continu_inzicht"]

[project.urls]
Documentation = "https://continu-inzicht.github.io/toolbox-continu-inzicht/"
Source = "https://github.com/continu-inzicht/toolbox-continu-inzicht"
